...

  var id: String { rawValue }

  var title: String {
    switch self {
    case .today: "Today"
    case .lists: "Lists"
    case .focus: "Focus"
    case .review: "Review"
    case .search: "Search"
    }
  }

...
